// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_okta: targets-per-actor ES|QL is locked (no watermark) 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM .entities.v2.latest.security___namespace__-*
| WHERE (entity.relationships.supervises.raw_identifiers.user.email IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.id IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.name IS NOT NULL)
    AND entity.source == \\"entityanalytics_okta.user\\"
| EVAL actorUserId = entity.id
| EVAL rawTargetKey = CASE(
    MV_COUNT(entity.relationships.supervises.raw_identifiers.user.email) > 0, entity.relationships.supervises.raw_identifiers.user.email,
    MV_COUNT(entity.relationships.supervises.raw_identifiers.user.id) > 0, entity.relationships.supervises.raw_identifiers.user.id,
    entity.relationships.supervises.raw_identifiers.user.name
  )
| MV_EXPAND rawTargetKey
| EVAL targetEntityId = CONCAT(\\"user:\\", rawTargetKey, \\"@okta\\")
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\"
    AND targetEntityId != \\"user:@okta\\"
    AND targetEntityId RLIKE \\".+:.+@.+\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;

exports[`SUPERVISES_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_okta: targets-per-actor ES|QL with watermark is locked 1`] = `
"FROM .entities.v2.latest.security___namespace__-*
| WHERE (entity.relationships.supervises.raw_identifiers.user.email IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.id IS NOT NULL OR entity.relationships.supervises.raw_identifiers.user.name IS NOT NULL)
    AND entity.source == \\"entityanalytics_okta.user\\"
    AND entity.lifecycle.last_seen > \\"2026-06-01T00:00:00.000Z\\"
| EVAL actorUserId = entity.id
| EVAL rawTargetKey = CASE(
    MV_COUNT(entity.relationships.supervises.raw_identifiers.user.email) > 0, entity.relationships.supervises.raw_identifiers.user.email,
    MV_COUNT(entity.relationships.supervises.raw_identifiers.user.id) > 0, entity.relationships.supervises.raw_identifiers.user.id,
    entity.relationships.supervises.raw_identifiers.user.name
  )
| MV_EXPAND rawTargetKey
| EVAL targetEntityId = CONCAT(\\"user:\\", rawTargetKey, \\"@okta\\")
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\"
    AND targetEntityId != \\"user:@okta\\"
    AND targetEntityId RLIKE \\".+:.+@.+\\"
| STATS supervises = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;
